fixing distorted mobile pics

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ h1 {
   }
   .pictures {
     width: 90%;
-    height: auto;
+    height: 90%;
   }
   .message {
     margin: 0 auto;
